# LIO-Lite-Vison

./: .gitignore  README.md  README_CN.md
src/LVIO-Lite/: CMakeLists.txt  package.xml
src/LVIO-Lite/cmake/: packages.cmake
src/LVIO-Lite/config/: hesaixt16.yaml  mid360.yaml
src/LVIO-Lite/include/: common_lib.h  custom_logs.hpp  imu_processing.hpp  laser_mapping.h  options.h  pointcloud_preprocess.h  so3_math.h  use-ikfom.hpp  utils.h
src/LVIO-Lite/include/ivox3d/: eigen_types.h  ivox3d.h  ivox3d_node.hpp
src/LVIO-Lite/include/register/: icp.hpp  ndt.hpp
src/LVIO-Lite/launch/: hesaiXT16.launch  location_360.launch  mapping_360.launch
src/LVIO-Lite/launch/include/: local_rviz.rviz  rviz.rviz
src/LVIO-Lite/maps/: .gitignore
src/LVIO-Lite/msg/: KeyFrame.msg
src/LVIO-Lite/script/: remove.py
src/LVIO-Lite/src/: laser_mapping.cc  options.cc  pointcloud_preprocess.cc  renderer.cc  run_location_online.cc  run_mapping_online.cc  utils.cc
src/LVIO-Lite/src/test/: pcd_to_bird_eye.cc  test_load.cc  test_split.cc
